# Svg2Path

./: .gitignore  CMakeLists.txt  README.md  Svg2Path.jucer
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/Svg2Path.xcodeproj/: project.pbxproj
Builds/MacOSX/Svg2Path.xcodeproj/project.xcworkspace/xcuserdata/assafdarsagol.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Svg2Path.xcodeproj/xcuserdata/assafdarsagol.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/MacOSX/Svg2Path.xcodeproj/xcuserdata/assafdarsagol.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2022/: Svg2Path.sln  Svg2Path_App.vcxproj  Svg2Path_App.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  SvgParser.cpp  SvgParser.h
